# freak

./: Dockerfile  README.md  dune-project  freak.opam
final-report/: ecs289-final-report.aux  ecs289-final-report.bbl  ecs289-final-report.blg  ecs289-final-report.out  ecs289-final-report.tex  main.bib
lib/: ascii.ml  dune  generator.ml  grammar.ml  harness.ml  wrappers.ml
